# mkTranslate

./: CHANGELOG.md  README.md  README_zh.md  pyproject.toml  setup.py  trans  translat.py  translate  translateDoc.py
mkTranslation/: __init__.py  adapters.py  cli.py  client.py  compat.py  gtoken.py  io_utils.py  lang_utils.py  model.py  net.py  network.py  strings_utils.py  trans_google.py  translate_chinese.py  translate_google.py  translate_youdao.py  translator.py  utils.py  xml_utils.py  zh_data.py
test/: android.xml  android的副本.xml  chinese.txt  ios.strings  ios的副本.strings  test.sh  test.txt  test_v2.py  translate_en_android.xml  translate_en_by_google_android.xml  translate_en_by_google_ios.strings  translate_en_by_google_test.txt  translate_en_by_youdao_ios.strings  translate_en_ios.strings  translate_gu_by_google_ios.strings  translate_gu_by_youdao_ios.strings  translate_ja_by_google_android.xml  translate_ja_by_google_ios.strings  translate_ja_by_google_test.txt  translate_ja_by_youdao_android.xml  translate_ja_by_youdao_ios.strings  translate_ja_by_youdao_test.txt  translate_ja_byyoudao_android.xml  translate_ka_by_google_ios.strings  translate_ko_by_google_ios.strings  translate_pt_android.xml  translate_pt_by_google_android.xml  translate_pt_by_google_ios.strings  translate_pt_by_google_test.txt  translate_pt_by_youdao_test.txt  translate_pt_ios.strings  translate_pt_test.txt  translate_vi_test.txt  translate_zh-cn_by_google_chinese.txt  translate_zh-hans_by_google_chinese.txt  translate_zh-hant_android.xml  translate_zh-hant_by_google_chinese.txt  (+2 more)
(+1 files in other folders)
